package is.hi.hbv202g.ass9.compositeLeafObservedByComposite;public interface Observer {
}
